# signalflow

./: CMakeLists.txt  README.md
include/signalflow/: buffer.hpp  fft.hpp  mel_scale.hpp  window.hpp
src/demo/: main.cpp
tests/: CMakeLists.txt  main_test.cpp  test_signalflow.cpp  test_wav.cpp
